--- a/React-login/src/index.css
+++ b/React-login/src/index.css
@@ -27,10 +27,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+ margin: 0;
+  padding: 0;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -62,6 +61,7 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    width: 100%;
   }
   a:hover {
     color: #747bff;
