--- a/React-login/src/index.css
+++ b/React-login/src/index.css
@@ -17,14 +17,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
  margin: 0;
@@ -32,7 +32,7 @@ body {
   width: 100%;
   min-height: 100vh;
 }
-
+/* 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -55,7 +55,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -63,12 +63,12 @@ button:focus-visible {
     background-color: #ffffff;
     width: 100%;
   }
-  a:hover {
+  /* a:hover {
     color: #747bff;
   }
   button {
     background-color: #f9f9f9;
-  }
+  } */
 }
 /* Dark theme styles */
 .dark body {
@@ -82,7 +82,7 @@ button:focus-visible {
   color: #fff;
   border: 1px solid #555;
 }
-
+/* 
 .dark a {
   color: #90caf9;
-}
+} */
